crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__public_data_planes_page_one.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
expression: page_one
---
{
  "data": {
    "publicDataPlanes": {
      "edges": [
        {
          "node": {
            "name": "ops/dp/public/aws-us-west-2-c1"
          }
        }
      ],
      "pageInfo": {
        "endCursor": "ops/dp/public/aws-us-west-2-c1",
        "hasNextPage": true
      }
    }
  }
}
