crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__public_data_planes_page_two.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
expression: page_two
---
{
  "data": {
    "publicDataPlanes": {
      "edges": [
        {
          "node": {
            "name": "ops/dp/public/gcp-us-central1-c2"
          }
        }
      ],
      "pageInfo": {
        "endCursor": "ops/dp/public/gcp-us-central1-c2",
        "hasNextPage": false
      }
    }
  }
}
